--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
                 {% for d in data %}
                   <tr>
                     <th scope="row">{{d.id}}</th>
-                    <td>{{d.username}}</td> <!--name same as from model student table-->
+                    <td>{{d.username}}</td> 
                     <td>{{d.last_name}}</td>
                     <td>{{d.email}}</td>
                     
